--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -70,7 +70,10 @@ dependencies {
     kapt("com.google.dagger:dagger-compiler:$dagger_version")
 //    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
-    // MainViewModel
+    //Rx java
+    implementation "io.reactivex.rxjava3:rxjava:3.0.6"
+
+    // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
     // LiveData
