--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DoitRemastered">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
+            android:exported="true"
+            android:name="com.example.doitremastered.ui.main.MainActivity"
             android:theme="@style/Theme.DoitRemastered.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
