--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,12 @@
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 rootProject.name = "Doit Remastered"
 include ':app'
